2011-01-07  Thomas Vander Stichele  <thomas at apestaart dot org>

	* pychecker/warn.py:
	  Identify nested code better.

2011-01-07  Thomas Vander Stichele  <thomas at apestaart dot org>

	* pychecker/warn.py:
	  Give us stats on how many warnings were triggered processing
	  each kind of block.

2011-01-07  Thomas Vander Stichele  <thomas at apestaart dot org>

	* pychecker/Config.py:
	  Process command line args before config files.
	  This gives a -d option a change to debug the processing of
	  config files.
	  Add debugging of loaded suppressions.

2011-01-07  Thomas Vander Stichele  <thomas at apestaart dot org>

	* pychecker/warn.py:
	  Debug filtering the warnings with the blacklist.
	* pychecker/pcmodules.py:
	  Document Class.ignoreAttrs.
	* pychecker/checker.py:
	  getWarnings only used by TKInter; so don't untils.debug there
	  too.
	* pychecker/Stack.py:
	  Clean up and document getType a little.  There are unneeded
	  if's there complicating the code.
	* pychecker/CodeChecks.py:
	  typemap documenting, and pep-8-ifying.

2011-01-06  Thomas Vander Stichele  <thomas at apestaart dot org>

	* test/test_pychecker_function.py:
	  Before 2.5, .0 for co_varnames was [outmost-iterable].
	  Go figure.

2011-01-06  Thomas Vander Stichele  <thomas at apestaart dot org>

	* test_expected/test103-2.2:
	* test_expected/test103-2.4:
	* test_expected/test103 (deleted):
	  Test 103 uses syntax that only works from 2.4 on.
	  Break up expected results in broken pre-2.4 and working 2.4 and
	  later.

2011-01-06  Thomas Vander Stichele  <thomas at apestaart dot org>

	* test_todo/test78.py:
	* test_input/test78.py (deleted):
	  Move a test that breaks on python 2.6 and older.

2011-01-06  Thomas Vander Stichele  <thomas at apestaart dot org>

	* test_todo/import44.py:
	* test_todo/test34.py:
	* test_todo/test44.py:
	* test_todo/test70.py:
	* test_todo/test71.py:
	* test_todo/test77.py:
	* test_input/test44.py (deleted):
	* test_input/test34.py (deleted):